# UV Workspace Root - No Python code at root level
[tool.uv.workspace]
members = ["sql_alchemy", "api_example"]

[tool.uv]
# Centralized version constraints for all workspace members
constraint-dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pymysql>=1.1.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=24.0.0,<25.0.0",
    "ruff>=0.3.0,<1.0.0",
    "ipython>=8.0.0,<9.0.0",
    "testcontainers>=3.7.0,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "flask>=3.0.0,<4.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
]

[project]
# Minimal project definition for workspace root
name = "public-sandbox-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []