[project]
name = "api-example"
version = "0.1.0"
description = "FastAPI example project"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"